# SEC_105_project

./: .gitignore  .pre-commit-config.yaml  README.md  certificates.db  env_setup.sh  handle_mypy_missing_library_stubs.sh  pyproject.toml  requirements-dev.txt  setup.cfg
sec105_project/: __init__.py  certificate.py  main.py
sec105_project_backend/: main.py
sec105_project_frontend/: certificate-info.html  client-certs-list.html  index.html  server-certs-list.html
