[metadata]
name = sec105_project
version = 0.0.1
description = SEC-105 project
long_description = file: README.md
long_description_content_type = text/markdown
author = Aureylz
author_email = auboudier.pro@gmail.com
license = GPL-2.0
license_file = LICENSE
classifiers =
    License :: OSI Approved :: GNU General Public License v2 (GPLv2)
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only

[options]
packages = find:
install_requires =
    fastapi
    netifaces
    pydantic
    uvicorn
python_requires = >=3.8
include_package_data = True
package_dir =
    = sec105_project

[options.packages.find]
where = sec105_project

[options.package_data]
sec105 = py.typed

[flake8]
max-line-length = 160
extend-ignore = E203
